# llm-foundations-and-systems

./: .gitignore  LICENSE  README.md  pyproject.toml
00_env/: setup.md
01_llm_foundations_prompting/: prompting_patterns.ipynb
02_data_and_finetuning/: dataset_curation.ipynb  tokenization_analysis.ipynb
05_evaluation_and_responsible_ai/: evaluation_framework.ipynb
