[project]
name = "llm-foundations-and-systems"
version = "0.1.0"
description = "Study repo for LLM foundations, fine-tuning, optimization, deployment, evaluation, and Responsible AI."
readme = "README.md"
requires-python = ">=3.10,<3.11"

# Keep the base dependencies minimal (only what everything needs)
dependencies = [
  "numpy<2",
  "pyarrow<12",
]

[project.optional-dependencies]
# Jupyter + notebook execution
notebooks = [
  "notebook",
  "ipykernel",
]

# Core LLM learning stack (CPU-friendly)
llm = [
  "transformers",
  "torch",
]

# HF datasets + evaluation stack (pinned for Catalina compatibility)
data = [
  "datasets<2.19",
  "evaluate",
]

# Quality-of-life tooling (optional)
dev = [
  "rich",
]

[tool.uv]
python = "3.10"
